static/additional-css/main.css
html, body {
    font-family: 'Montserrat', sans-serif;
    height: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

#map {
    height: 45vw;
    /*height:1vw;*/
}

.container-fluid,
.col-md-3,
.col-md-9 {
    height: 100%;
}


.ApiPicture {
    max-height: 10vw;
}

:root {
    --primary-color: #D041F3;
    --secondary-color: #E58AFD;
}

.top-title {
    height: 7vw;
    font-size: 6em;
    font-family: 'Inconsolata', monospace;
    color: var(--secondary-color);
    background-color: var(--primary-color);
    text-align: center;
    font-style: italic;
}

.sidenav {
    /*top: 0;*/
    /*bottom: 0;*/
    /*position: fixed;*/
}


.hidden-on-desktop {
    visibility: hidden;
}



/* Phones only */
@media only screen and (max-width: 830px) and (min-width: 300px) and (max-height: 830px){


    .hidden-on-desktop {
        visibility: visible;
    }


    .hamburger-bar {
        width: 35px;
        height: 5px;
        background-color: var(--primary-color);
        margin: 6px 0;
    }

    /* The side navigation menu */
    .sidenav {
        height: 100%; 
        position: fixed; /* Stay in place */
        z-index: 1; /* Stay on top */
        left: 0;
        background-color: white;  
        overflow-x: hidden;  
        overflow: auto;
        transform: translate(-100vw, 0);
        transition: 0.5s ease; 
    }

    .open {
        transform: translate(0,0);
    }
}



/*Phone vertical*/
@media only screen and (max-width: 450px) and (min-width: 300px) and (max-height: 750px){
    
    .ApiPicture {
        max-height: 40vw;
    }

    .top-title {
    height: 12vw;
    font-size: 2em;
    }

    .sidenav {
        top: 23vw;
        height: 100vw;
    }
}


/*Phone horizontal*/
@media only screen and (max-width: 820px) and (min-width: 451px) and (max-height: 450px) {
    
    .ApiPicture {
        max-height: 20vw;
    }

    .top-title {
    height: 10vw;
    font-size: 3em;
    }

    .sidenav {
        top: 16.3vw;
        height: 40vw;
    }
}



/*iPhone X  and Pixel 2L vertical*/
@media only screen and (max-width: 420px) and (min-width: 370px) and (max-height: 830px){
    
    .ApiPicture {
        max-height: 40vw;
    }

    .top-title {
    height: 12vw;
    font-size: 2em;
    }

    .sidenav {
        top: 21.8vw;
    }
}


/*iPhone X and Pixel 2L horizontal*/
@media only screen and (max-width: 830px) and (min-width: 810px) and (max-height: 420px) {
    
    .ApiPicture {
        max-height: 20vw;
    }

    .top-title {
    height: 8vw;
    font-size: 3em;
    }

    .sidenav {
        top: 13vw;
        flex: 0 0 100%;
        max-width: 100%
        /*height: 40vw;*/
    }
}



/*Tablet vertical*/
@media only screen and (max-width: 1050px) and (min-width: 750px) and (min-height: 1024px) {
    
    .ApiPicture {
        max-height: 30vw;
    }

    .top-title {
    height: 10vw;
    font-size: 3.5em;
    }
}

/*Tablet horizontal*/
@media only screen and (max-width: 1400px) and (min-width: 1000px) and (min-height: 750px) {
    
    .ApiPicture {
        max-height: 20vw;
    }

    .top-title {
    height: 8vw;
    font-size: 3.5em;
    }
}

